tests/good/typing/037-tsum.clap
type ocaml = { O + C + A + M + L }
