tests/bad/lexical/012-task-state-type.clap
type state result> = { Running + Converged result +}
 
